// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Component Tests Matches Mounted SnapShot 1`] = `
<GridColumnTest>
  <GridColumn
    className=""
  >
    <div
      className="nwc-grid-col "
    >
      <GridColumn
        className=""
      >
        <div
          className="nwc-grid-col "
        >
          Hello
        </div>
      </GridColumn>
    </div>
  </GridColumn>
</GridColumnTest>
`;

exports[`Root Component Tests Matches Shallow SnapShot 1`] = `
<GridColumn
  className=""
>
  <GridColumn
    className=""
  >
    Hello
  </GridColumn>
</GridColumn>
`;
